force-app/main/default/objects/Fitbit_Summary__c/Fitbit_Summary__c.object-meta.xml
<CustomObject>
    <label>Fitbit Summary</label>
    <nameField>
        <displayFormat>FS{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitbit Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>