force-app/main/default/objects/Fitbit_Summary__c/fields/Auto_Sync__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Sync</label>
    <type>Checkbox</type>
</CustomField>