force-app/main/default/objects/Fitbit_Summary__c/fields/Fitbit_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Fitbit_User_Name__c</fullName>
    <label>Fitbit User Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>