force-app/main/default/objects/Fitbit_Summary__c/fields/Target_Daily_Distance__c.field-meta.xml
<CustomField>
    <fullName>Target_Daily_Distance__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Target Daily Distance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>