force-app/main/default/objects/Fitbit_Summary__c/fields/Target_Daily_Steps__c.field-meta.xml
<CustomField>
    <fullName>Target_Daily_Steps__c</fullName>
    <defaultValue>8000</defaultValue>
    <label>Target Daily Steps</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>